added amd'ed underscore + backbone

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -6,6 +6,8 @@ bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 
+app.require.local = 0
+
 [staging : production]
 
 [testing : production]
@@ -15,3 +17,5 @@ phpSettings.display_errors = 1
 [development : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
+
+app.require.local = 1
